# mircofaas

./: README.md  demo.py  pyproject.toml
microfaas/: __init__.py  __runner__.py  buildah.py  cli.py  config_app.py  demo.py  hypercorn_config.py  manager.py  runtime.py  utils.py
microfass/: __runner__.py  buildah.py  runtime.py
