[tool.poetry]
name = "microfaas"
version = "0.1.0"
description = "The tiniest FaaS"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
quart = "^0.12.0"
hypercorn = {extras = ["uvloop"], version = "^0.9.5"}
aiofiles = "^0.5.0"
unnamed-rpc = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
